// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 8,
  "toChain": "(rounded 12)",
}
`;

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' > fee 1`] = `"(rounded 0.0003)"`;

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 10,
}
`;
